# D3DLearning

./: .gitignore  README.md
D3DProject/: CMakeLists.txt  CMakePresets.json
D3DProject/scripts/: fetch_libraries.cmake
D3DProject/source/: CMakeLists.txt  main.cpp
D3DProject/source/common/: Com.cpp  Com.h  glfwAutoInit.cpp  glfwAutoInit.h
D3DProject/source/object/: ObjectData.h
D3DProject/source/renderer/: RenderManager.cpp  RenderManager.h  Renderer.cpp  Renderer.h
D3DProject/source/shader/: PixelShader.hlsl  VertexShader.hlsl
D3DProject/source/window/: Window.cpp  Window.h
